Add new version of production build

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>Ionic App</title>
+  <title>Intelli Home</title>
 
   <base href="https://gyokkoo.github.io/intelli-home-app/">
   <meta name="color-scheme" content="light dark"/>
@@ -19,12 +19,12 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
 <link rel="stylesheet" href="styles.dd4dfa9cc611f6fbae53.css"></head>
 
 <body class="mat-typography">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.2000caada3204222b228.js" type="module"></script><script src="runtime-es5.2000caada3204222b228.js" nomodule defer></script><script src="polyfills-es5.201be57098f2c5085f92.js" nomodule defer></script><script src="polyfills-es2015.f4d09162f068ef1dd55d.js" type="module"></script><script src="main-es2015.b4acd20be0b46d16fdfe.js" type="module"></script><script src="main-es5.b4acd20be0b46d16fdfe.js" nomodule defer></script></body>
+<script src="runtime-es2015.6b733417ed9442eb9ae2.js" type="module"></script><script src="runtime-es5.6b733417ed9442eb9ae2.js" nomodule defer></script><script src="polyfills-es5.201be57098f2c5085f92.js" nomodule defer></script><script src="polyfills-es2015.f4d09162f068ef1dd55d.js" type="module"></script><script src="main-es2015.f2cfe769e86fe3873ddf.js" type="module"></script><script src="main-es5.f2cfe769e86fe3873ddf.js" nomodule defer></script></body>
 
 </html>
